data/derived/fa15/progs/unify/prog4114.ml.out
Characters 234-238:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type (int * int) list
       but an expression was expected of type int * int list
